--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "@babel/core": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
+    "@babel/plugin-proposal-private-property-in-object":"^7.21.11",
     "babel-loader": "^9.1.3",
     "path": "^0.12.7",
     "react-router-dom": "^6.24.0",
